tesp modal portal and image view

--- a/nextgisweb/gui/nodepkg/modal-portal/ImageView.less
+++ b/nextgisweb/gui/nodepkg/modal-portal/ImageView.less
@@ -39,6 +39,7 @@ body {
             align-items: center;
             justify-content: center;
             position: fixed;
+            z-index: 1;
 
             button {
                 color: rgb(200, 200, 200);
