--- a/nextgisweb/gui/nodepkg/modal-portal/ModalPortal.less
+++ b/nextgisweb/gui/nodepkg/modal-portal/ModalPortal.less
@@ -14,6 +14,7 @@ body {
     left: 0;
     display: flex;
     background-color: rgba(0, 0, 0, 0.45);
+    z-index: 1081;
 
     .block {
         margin: auto;
