--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -369,3 +369,25 @@ textarea::-webkit-input-placeholder {
 	color: #2a398ca6 !important;
 }
 
+.modal-desc-home-page {
+	padding: 16px;
+
+	.ant-modal-close {
+		top: 0px;
+		right: 0px;
+		border-radius: 50%;
+	}
+
+	.ant-modal-title {
+		margin: auto;
+		color: #2a388c;
+		overflow: hidden;
+		-webkit-line-clamp: 2;
+		display: -webkit-box;
+		-webkit-box-orient: vertical;
+		text-transform: uppercase;
+		font-weight: 500;
+		max-width: 500px;
+		text-align: center;
+	}
+}
