--- a/nextgisweb/webmap/nodepkg/display/DisplayWidget.less
+++ b/nextgisweb/webmap/nodepkg/display/DisplayWidget.less
@@ -1,8 +1,13 @@
 body {
     display: flex;
     flex-direction: column;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    left: 0;
 
-    > .webmap-wrapper {
+    >.webmap-wrapper {
         flex-grow: 1;
         min-width: 0;
         min-height: 0;
@@ -10,8 +15,9 @@ body {
 }
 
 .ngw-webmap-display {
-    > .ant-splitter-panel,
-    > .ant-splitter-panel > .ant-splitter > .ant-splitter-panel {
+
+    >.ant-splitter-panel,
+    >.ant-splitter-panel>.ant-splitter>.ant-splitter-panel {
         padding: 0;
     }
 }
