--- a/nextgisweb/auth/nodepkg/login/LoginForm.less
+++ b/nextgisweb/auth/nodepkg/login/LoginForm.less
@@ -1,6 +1,15 @@
 .ngw-auth-login-form {
     text-align: center;
 
+    input:-webkit-autofill,
+    input:-webkit-autofill:hover,
+    input:-webkit-autofill:focus,
+    input:-webkit-autofill:active {
+        -webkit-background-clip: text;
+        transition: background-color 5000s ease-in-out 0s;
+        box-shadow: inset 0 0 20px 20px #ffffff00;
+    }
+
     .oauth {
         .ant-btn {
             width: 100%;
@@ -9,14 +18,12 @@
 
     .separator {
         margin: 1em 0;
-        background: linear-gradient(
-            180deg,
-            rgba(0, 0, 0, 0) calc(50% - 1px),
-            var(--icon-color) calc(50%),
-            rgba(0, 0, 0, 0) calc(50% + 1px)
-        );
+        background: linear-gradient(180deg,
+                rgba(0, 0, 0, 0) calc(50% - 1px),
+                var(--icon-color) calc(50%),
+                rgba(0, 0, 0, 0) calc(50% + 1px));
 
-        > span {
+        >span {
             background-color: white;
             padding: 0 1ex;
             color: var(--text-secondary);
