--- a/nextgisweb/resource/nodepkg/home-page/Header.less
+++ b/nextgisweb/resource/nodepkg/home-page/Header.less
@@ -183,15 +183,12 @@
 }
 
 .ant-btn-primary {
-	background-color: transparent;
-    font-family: "Montserrat";
-    font-weight: 500;
-    border-color: var(--text-secondary);
-	color: #000 !important;
+	background-color: #2a388c !important;
+    // font-family: "Montserrat";
+    // font-weight: 500;
+    // border-color: var(--text-secondary);
 
 	&:hover {
-		color: #2a388c !important;
-		background: #ffffff !important;
 		border-color: #2a388c !important;
 	}
 }
@@ -206,6 +203,7 @@
 		font-family: "Montserrat";
 		font-weight: 500;
 		margin: -9px 0 9px 0;
+		font-size: 18px;
 	}
 
 	input:-webkit-autofill,
@@ -213,7 +211,6 @@
 	input:-webkit-autofill:focus,
 	input:-webkit-autofill:active {
 		-webkit-background-clip: text;
-		-webkit-text-fill-color: #2a388c !important;
 		transition: background-color 5000s ease-in-out 0s;
 		box-shadow: inset 0 0 20px 20px #ffffff00;
 	}
