header css login page

--- a/nextgisweb/resource/nodepkg/home-page/Header.less
+++ b/nextgisweb/resource/nodepkg/home-page/Header.less
@@ -184,9 +184,9 @@
 
 .ant-btn-primary {
 	background-color: #2a388c !important;
-    // font-family: "Montserrat";
-    // font-weight: 500;
-    // border-color: var(--text-secondary);
+    font-family: "Montserrat";
+    font-weight: 500;
+    border-color: var(--text-secondary);
 
 	&:hover {
 		border-color: #2a388c !important;
