--- a/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
@@ -5,6 +5,7 @@
     }
 
     .ant-tree-treenode {
+        margin: 0;
         padding: 0;
 
         > .ant-tree-indent {
@@ -23,7 +24,7 @@
 
             > .ant-tree-switcher-leaf-line {
                 &::after {
-                    width: 12px;
+                    width: 6px;
                     height: 14px;
                 }
             }
@@ -40,36 +41,28 @@
         }
 
         &.ant-tree-treenode-selected {
-            background-color: #e6f0f800;
+            background-color: #e6f0f8;
         }
     }
 
-    &:not(.ant-tree-show-line) .ant-tree-switcher-noop {
-        width: 6px;
-    }
-
-    &.ant-tree-show-line {
-        .ant-tree-indent-unit {
-            width: 18px;
-
-            &::before {
-                right: 6px;
-            }
-        }
+    .ant-tree-switcher-line-icon {
+        vertical-align: -0.3em;
     }
 
     .ant-tree-checkbox {
-        top: initial;
-        margin-inline-end: 0px;
-        align-self: flex-start;
-        margin-top: 4px;
+        align-self: start;
+        scale: 0.75;
+        margin-top: 6px;
     }
 
     .ant-tree-node-content-wrapper {
         display: flex;
+        column-gap: 6px;
+        align-items: start;
+        padding-left: 0;
         width: 100%;
         min-width: 0;
-        align-items: center;
+        line-height: 28px;
 
         &:hover {
             background: transparent;
@@ -79,9 +72,23 @@
             margin: 0;
         }
 
-        .ant-tree-icon__customize {
+        &.ant-tree-node-selected {
+            background-color: transparent;
+        }
+
+        .ant-tree-iconEle.ant-tree-icon__customize {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            width: auto;
+            height: 28px;
+
+            &:empty {
+                display: none;
+            }
+
             img {
-                vertical-align: text-top;
+                display: block;
             }
         }
 
@@ -94,13 +101,6 @@
                 overflow: hidden;
                 text-overflow: ellipsis;
                 white-space: nowrap;
-                display: flex;
-
-                .legend-title {
-                    overflow: hidden;
-                    text-overflow: ellipsis;
-                    white-space: nowrap;
-                }
             }
 
             .tree-item-action {
@@ -109,137 +109,20 @@
                 justify-content: end;
             }
 
-            &:hover {
-                background: #ffffff00;
-                border-radius: 3px;
-                color: #000000;
-            }
+            .more,
+            .legend {
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                justify-items: center;
+                border-radius: 50%;
+                width: 24px;
+                height: 24px;
 
+                &:hover {
+                    background: #076dbf21;
+                }
+            }
         }
     }
-}
-
-.tree-item-menu {
-    .ant-dropdown-menu-title-content {
-        display: flex;
-        flex-wrap: nowrap;
-        justify-content: flex-start;
-        gap: 5px;
-        align-items: center;
-    }
-}
-
-:where(.css-dev-only-do-not-override-1j0bb9m).ant-tree .ant-tree-node-content-wrapper:hover, :where(.css-dev-only-do-not-override-1j0bb9m).ant-tree .ant-tree-checkbox+span:hover {
-    background-color: #ffffff00;
-}
-
-.ant-tree .ant-tree-node-content-wrapper .ant-tree-iconEle {
-    font-size: 24px;
-    color: #106a90;
-    width: 24px;
-    height: 24px;
-    display: flex;
-    justify-items: center;
-    justify-content: center;
-    align-items: center;
-    margin: 0 6px;
-}
-
-
-.icon-not-active {
-    background-color: #00000000 !important;
-    cursor: auto;
-}
-
-.titleName {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: block;
-    white-space: nowrap;
-    padding: 0 0 0 5px;
-    font-size: small;
-    width: 100%;
-
-    &:hover {
-        background: rgba(247, 247, 247, 1);
-        // padding: 2px;
-        border-radius: 3px;
-    }
-}
-
-.ant-tree .ant-tree-treenode {
-    align-items: center;
-    display: flex;
-    outline: none;
-    padding: 0;
-    margin: 3px 0;
-}
-
-.iconCustom {
-    display: flex;
-    align-items: center;
-    padding: 0 4px;
-}
-
-.legend-list {
-    margin: 0 5px 0 5px;
-}
-
-.more,
-.legend {
-    font-size: 18px;
-    color: #106a90;
-    width: 24px;
-    height: 24px;
-    display: flex;
-    justify-items: center;
-    justify-content: center;
-    align-items: center;
-    flex: 0 0 auto;
-
-
-}
-
-.colSingleIconLegend {
-    margin: 0;
-
-    &:hover {
-        color: #106a90;
-        border: #106a90 solid 1px;
-        border-radius: 3px;
-        margin: -1px;
-    }
-}
-
-.ant-tree .ant-tree-node-content-wrapper .ant-tree-iconEle,
-.ant-tree .ant-tree-checkbox+span .ant-tree-iconEle {
-    display: flex;
-}
-
-.iconSingle {
-    display: flex;
-}
-
-.ant-tree .ant-tree-node-content-wrapper.ant-tree-node-selected,
-.ant-tree .ant-tree-checkbox+span.ant-tree-node-selected {
-    background-color: #ffffff00;
-}
-
-.ant-tree .ant-tree-switcher-leaf-line:before {
-    position: absolute;
-    top: -10px;
-    inset-inline-end: 12px;
-    bottom: -11px;
-    margin-inline-start: -1px;
-    border-inline-end: 1px solid #d9d9d9;
-    content: "";
-}
-
-.ant-tree-show-line .ant-tree-indent-unit:before {
-    position: absolute;
-    top: -12px;
-    inset-inline-end: 12px;
-    bottom: -10px;
-    border-inline-end: 1px solid #d9d9d9;
-    content: "";
 }
