--- a/nextgisweb/webmap/nodepkg/layers-tree/Legend.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/Legend.less
@@ -4,19 +4,13 @@
     flex-direction: column;
 
     &.checkable {
-        margin-left: -4px;
+        margin-left: -20px;
     }
 
     &.uncheckable {
-        margin-left: 0;
+        margin-left: 0px;
     }
 
-    .legend-item {
-        display: flex;
-        align-items: center;
-        margin-left: 7px;
-    }
-    
     > .legend-symbol {
         display: flex;
         column-gap: 4px;
@@ -27,22 +21,13 @@
 
         > .ant-checkbox-wrapper {
             align-self: start;
+            scale: 0.75;
         }
 
         > .legend-title {
             overflow: hidden;
             text-overflow: ellipsis;
             white-space: nowrap;
-        }
-
-        .ant-checkbox-checked .ant-checkbox-inner {
-            border-color: #d9d9d9;
-            border: dotted #d9d9d9 0.005em;
-        }
-
-        .ant-checkbox .ant-checkbox-inner {
-            border-color: #d9d9d9;
-            border: dotted #d9d9d9 0.005em;
         }
     }
 }
