legend action left position, sort dropdown action menu layer tree

--- a/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
+++ b/nextgisweb/webmap/nodepkg/layers-tree/LayersTree.less
@@ -61,6 +61,7 @@
                 overflow: hidden;
                 text-overflow: ellipsis;
                 white-space: nowrap;
+                display: flex;
 
                 .legend-title {
                     overflow: hidden;
@@ -167,4 +168,8 @@
     bottom: -10px;
     border-inline-end: 1px solid #d9d9d9;
     content: "";
+}
+
+.legend-list {
+    margin: 0 5px 0 5px;
 }
