Footer component save setting content

--- a/nextgisweb/resource/nodepkg/home-page/Footer.less
+++ b/nextgisweb/resource/nodepkg/home-page/Footer.less
@@ -83,8 +83,17 @@
 
 					.phone-item {
 						display: flex;
-						flex-direction: row;
+						width: 100%;
 						justify-content: space-between;
+						align-items: center;
+
+						.name {
+							padding: 0 5px 0 0;
+						}
+						.value {
+							padding: 0 5px 0 0;
+							text-align: right;
+						}
 					}
 				}
 			}
@@ -106,6 +115,10 @@
 
 			.address {
 				width: 100%;
+			}
+
+			.service {
+				text-transform: uppercase;
 			}
 		}
 
