button control footer

--- a/nextgisweb/resource/nodepkg/home-page/Footer.less
+++ b/nextgisweb/resource/nodepkg/home-page/Footer.less
@@ -139,4 +139,15 @@
 			align-items: center;
 		}
 	}
+
+	.control-button {
+		position: absolute;
+		left: 0;
+		display: flex;
+		flex-direction: column;
+
+		button {
+			background-color: #fff;
+		}
+	}
 }
