year and footer name for home page

--- a/nextgisweb/resource/nodepkg/home-page/Footer.less
+++ b/nextgisweb/resource/nodepkg/home-page/Footer.less
@@ -132,11 +132,15 @@
 			padding: 0;
 			margin: 10px 0;
 		}
+	}
 
-		.uriit-footer-name {
+	.uriit-footer-name {
+		display: flex;
+		height: 50px;
+		align-items: center;
+
+		.year-name-block {
 			display: flex;
-			height: 50px;
-			align-items: center;
 		}
 	}
 
