style css  home page test...

--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -8,8 +8,13 @@
 		line-height: 1.5714285714285714;
 	}
 
+	a {
+		text-decoration: none;
+		color: #ffffff;
+	}
+
 	a:hover {
-		color: #2A388C !important;
+		color: rgb(175, 180, 253) !important;
 	}
 
 	.main {
