--- a/nextgisweb/resource/nodepkg/home-page/Footer.less
+++ b/nextgisweb/resource/nodepkg/home-page/Footer.less
@@ -76,17 +76,9 @@
 
 			.services-url {
 				padding: 0 0 0 5px;
-				display: flex;
-				flex-direction: column;
-				text-decoration: none;
 
 				.icon-url {
 					font-size: 12px;
-				}
-
-				a {
-					text-decoration: none;
-					color: #ffffff;
 				}
 			}
 
@@ -98,10 +90,9 @@
 
 			.address-content {
 				display: flex;
-				justify-content: space-between;
 
 				.phone {
-					width: 100%;
+					padding: 0 10px 0 0;
 
 					.phone-item {
 						display: flex;
@@ -110,7 +101,7 @@
 						align-items: center;
 
 						.name {
-							padding: 0 5px 0 0;
+							padding: 0 10px 0 0;
 						}
 
 						.value {
@@ -137,8 +128,8 @@
 			}
 
 			.address {
-				width: 100%;
-				padding: 2px 0;
+				width: 33.33333333%;
+				padding: 0 10px 0 0;
 			}
 
 			.service {
