change style and icom maptole home page

--- a/nextgisweb/resource/nodepkg/home-page/Content.less
+++ b/nextgisweb/resource/nodepkg/home-page/Content.less
@@ -55,9 +55,9 @@
 				}
 
 				.ant-input-affix-wrapper {
-					border-bottom-width: 1px !important;
+					border-image: linear-gradient(0.25turn, #2a388c, #2a388c, #2a388c00);
+					border-image-slice: 1;
 					border-bottom-style: solid !important;
-					border-color: #2A388C;
 					border-style: none;
 					border-radius: 0;
 					background: transparent;
@@ -91,8 +91,6 @@
 				}
 
 				.ant-input-affix-wrapper {
-					border-bottom-color: #2a388c;
-					border-radius: 0;
 					border-right-color: #ffffff00;
 					border-left-color: #ffffff00;
 					border-top-color: #ffffff00;
@@ -148,6 +146,7 @@
 										border-radius: 3px;
 										padding: 5px;
 										font-weight: 500;
+										color: #2a388c;
 									}
 								}
 							}
