--- a/nextgisweb/resource/nodepkg/home-page/Header.less
+++ b/nextgisweb/resource/nodepkg/home-page/Header.less
@@ -37,6 +37,9 @@
 			display: flex;
 			text-transform: uppercase;
 			align-items: center;
+			background-color: #00000040;
+			box-shadow: 0px 0px 7px 3px #00000040;
+			border-radius: 4px;
 
 			.button-link {
 				display: flex;
@@ -80,47 +83,7 @@
 					color: #ffffff;
 				}
 			}
-
-			.menu-avatar {
-				width: 100%;
-				display: flex;
-				justify-content: center;
-				align-items: center;
-				margin: 0 0 0 9px;
-				border-radius: 4px;
-				height: 20px;
-				border: 1px solid white;
-
-				>a {
-					font-size: 14px;
-					text-decoration: none;
-					color: white;
-				}
-
-				&-label {
-					display: flex;
-					vertical-align: middle;
-					height: 22px;
-					line-height: 22px;
-					border-radius: 2px;
-					color: #fff;
-					font-size: 12px;
-					text-align: center;
-					cursor: pointer;
-					justify-content: center;
-					font-weight: 400;
-					text-transform: capitalize;
-					margin: 0 12px
-				}
-
-				.ant-btn-icon {
-					margin-inline-start: 8px !important;
-					margin-inline-end: 2px !important;
-				}
-			}
 		}
-
-
 	}
 
 	.icon-edit {
@@ -212,91 +175,6 @@
 					svg {
 						color: #ffffff;
 					}
-
-				}
-
-				.menu-avatar {
-					width: 100%;
-					display: flex;
-					justify-content: center;
-					align-items: center;
-					margin: 0;
-					border-radius: 4px;
-					height: 20px;
-					border: 1px solid white;
-
-					>a {
-						font-size: 14px;
-						text-decoration: none;
-						color: white;
-					}
-
-					&-label {
-						display: flex;
-						vertical-align: middle;
-						height: 22px;
-						line-height: 22px;
-						border-radius: 2px;
-						color: #fff;
-						font-size: 12px;
-						text-align: center;
-						cursor: pointer;
-						justify-content: center;
-						font-weight: 400;
-						text-transform: capitalize;
-					}
-
-					.ant-btn-icon {
-						margin-inline-start: 8px !important;
-						margin-inline-end: 2px !important;
-					}
-				}
-
-				.menu-avatar-authenticated {
-					line-height: 1;
-					padding: 0 2px;
-					margin: 0 10px;
-				}
-
-
-				.menu-avatar-danger {
-					.menu-avatar-label {
-						color: var(--on-primary);
-						background-color: var(--surface-bg-danger);
-					}
-				}
-
-				.menu-avatar-popover {
-					.ant-popover-title {
-						padding: 0;
-						min-width: 0;
-						display: flex;
-						justify-content: center;
-					}
-
-					.ant-popover-inner-content {
-						padding: 0px;
-						display: flex;
-						flex-direction: column;
-						align-items: flex-end;
-
-						div.warning {
-							display: block;
-							padding: 6px 12px;
-							background-color: var(--surface-bg-danger);
-						}
-
-						a {
-							display: block;
-							padding: 6px 12px;
-							text-decoration: none;
-							color: var(--text-base);
-
-							&:hover {
-								background-color: rgba(0, 0, 0, 0.04);
-							}
-						}
-					}
 				}
 			}
 		}
@@ -340,6 +218,104 @@
 		}
 
 
+	}
+}
+
+.menu-avatar {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 4px;
+	height: 20px;
+	border: 1px solid white;
+	margin: 0 10px;
+
+	>a {
+		font-size: 14px;
+		text-decoration: none;
+		color: white;
+	}
+
+	&-label {
+		display: flex;
+		vertical-align: middle;
+		height: 22px;
+		line-height: 22px;
+		border-radius: 2px;
+		color: #fff;
+		font-size: 12px;
+		text-align: center;
+		cursor: pointer;
+		justify-content: center;
+		font-weight: 500;
+		padding: 0 10px;
+
+		&:hover {
+			color: rgb(175, 180, 253) !important;
+		}
+	}
+
+	.ant-btn-icon {
+		margin-inline-start: 8px !important;
+		margin-inline-end: 2px !important;
+	}
+
+	.ant-btn-variant-link {
+		color: #fff;
+		box-shadow: none;
+		font-weight: 500;
+
+		&:hover {
+			color: rgb(175, 180, 253) !important;
+		}
+	}
+}
+
+.menu-avatar-authenticated {
+	line-height: 1;
+	padding: 0 2px;
+	margin: 0 10px;
+}
+
+
+.menu-avatar-danger {
+	.menu-avatar-label {
+		color: var(--on-primary);
+		background-color: var(--surface-bg-danger);
+	}
+}
+
+.menu-avatar-popover {
+	.ant-popover-title {
+		padding: 0;
+		min-width: 0;
+		display: flex;
+		justify-content: center;
+	}
+
+	.ant-popover-inner-content {
+		padding: 0px;
+		display: flex;
+		flex-direction: column;
+		align-items: flex-end;
+
+		div.warning {
+			display: block;
+			padding: 6px 12px;
+			background-color: var(--surface-bg-danger);
+		}
+
+		a {
+			display: block;
+			padding: 6px 12px;
+			text-decoration: none;
+			color: var(--text-base);
+
+			&:hover {
+				background-color: rgba(0, 0, 0, 0.04);
+			}
+		}
 	}
 }
 
