change style home page

--- a/nextgisweb/resource/nodepkg/home-page/Header.less
+++ b/nextgisweb/resource/nodepkg/home-page/Header.less
@@ -2,14 +2,12 @@
 	height: 200px;
 	padding: 0 10% 0 10%;
 
-
-
 	.edit-panel {
 		display: flex;
 		flex-direction: column;
 		position: absolute;
-		left: 32px;
-		top: 4px;
+		left: 38px;
+		top: 9px;
 		background: #fff;
 		box-shadow: 0 3px 7px rgba(2, 34, 60, 0.16);
 		z-index: 1000;
@@ -50,6 +48,7 @@
 
 					.ant-divider-vertical {
 						position: relative;
+						margin: 5px;
 						border-inline-start: 1px solid #fff;
 					}
 				}
@@ -69,7 +68,8 @@
 			}
 
 			.res-link {
-				margin: 0 12px 0 12px;
+				margin: 0 12px 0 0;
+				font-size: 24px;
 
 				svg {
 					color: #ffffff;
@@ -208,7 +208,7 @@
 .menu-avatar-authenticated {
 	line-height: 1;
 	padding: 0 2px;
-	margin: 0 10px;
+	margin: 0 15px;
 }
 
 
