--- a/nextgisweb/resource/nodepkg/home-page/Footer.less
+++ b/nextgisweb/resource/nodepkg/home-page/Footer.less
@@ -11,7 +11,7 @@
 	.footer-info {
 		padding: 0;
 		min-height: 190px;
-		margin: 10px 0 10px 0;
+		margin: 40px 0;
 		display: flex;
 
 		.logo-block {
