--- a/nextgisweb/resource/nodepkg/home-page/Header.less
+++ b/nextgisweb/resource/nodepkg/home-page/Header.less
@@ -35,7 +35,7 @@
 			justify-content: flex-end;
 
 			.button-link {
-				width: 100%;
+				width: calc(100% - 24px);
 
 				.menu-indicator {
 					font-size: 24px;
